--- a/Øvehjemmeside/gumphate.html
+++ b/Øvehjemmeside/gumphate.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gump</title>
+    <title>I Hate Gump</title>
+    <style>
+        body{
+            background-color: crimson;
+        }
+    </style>
 </head>
 <body>
-    <h1>Jeg kan godt li Gump</h1> 
-    <a href="gumphate.html">HvadSyntesDuOmGump?</a>
+    
 </body>
 </html>
