gump er endeligt noget sit maximale styrke

--- a/Øvehjemmeside/gumphate.html
+++ b/Øvehjemmeside/gumphate.html
@@ -12,6 +12,7 @@
     </style>
 </head>
 <body>
-    
+    <h1>Jeg absolut hader Gump</h1> 
+    <a href="index.html">Elsker Du Gump?</a>
 </body>
 </html>
