--- a/Øvehjemmeside/index.html
+++ b/Øvehjemmeside/index.html
@@ -5,9 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gump</title>
+    <style>
+        body{
+            background-color: azure;
+        }
+    </style>
 </head>
 <body>
     <h1>Jeg kan godt li Gump</h1> 
-    <a href="gumphate.html">HvadSyntesDuOmGump?</a>
+    <a href="gumphate.html">Hader du Gump?</a>
 </body>
 </html>
