Gump er mere blålig

--- a/Øvehjemmeside/index.html
+++ b/Øvehjemmeside/index.html
@@ -7,7 +7,7 @@
     <title>Gump</title>
     <style>
         body{
-            background-color: azure;
+            background-color: lightskyblue;
         }
     </style>
 </head>
