--- a/Øvehjemmeside/gumphate.html
+++ b/Øvehjemmeside/gumphate.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>I Hate Gump</title>
+    <title>GumpHate</title>
     <style>
         body{
             background-color: crimson;
@@ -12,7 +12,7 @@
     </style>
 </head>
 <body>
-    <h1>Jeg absolut hader Gump</h1> 
-    <a href="index.html">Elsker Du Gump?</a>
+    <h1>Jeg absolut hader Gump!</h1> 
+    <a href="index.html">Elsker du Gump?</a>
 </body>
 </html>
